[tool.poetry]
name = "semantic-release-pr-title-check"
version = "0.1.0" # Automatically updated by semantic-release
description = ""
authors = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
readme = "README.md"
packages = [{include = "semantic_release_pr_title_check"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
